# B2-EdgeAI

./: README.md  classifier_metric.json  client_app.py  colorlast.py  convert_to_16nc.py  convert_to_yolo.py  data_paritioning.py  inference.py  old_task.py  oldclient.py  pyproject.toml  server_app.py  split_train_validate.py  task.py  yolo_specialization_module.py
mva/: README.md  pyproject.toml  yolo11n.yaml
mva/mva/: __init__.py  client_app.py  server_app.py  task.py
mva/mva/data/mvadata/: data.yaml
mva/runs/detect/train/: args.yaml  results.csv
mva/runs/detect/train10/: args.yaml  results.csv
mva/runs/detect/train100/: args.yaml
mva/runs/detect/train101/: args.yaml
mva/runs/detect/train102/: args.yaml
mva/runs/detect/train103/: args.yaml
mva/runs/detect/train104/: args.yaml
mva/runs/detect/train105/: args.yaml
mva/runs/detect/train106/: args.yaml
mva/runs/detect/train107/: args.yaml
mva/runs/detect/train108/: args.yaml
mva/runs/detect/train109/: args.yaml
mva/runs/detect/train11/: args.yaml
mva/runs/detect/train110/: args.yaml
mva/runs/detect/train111/: args.yaml
mva/runs/detect/train112/: args.yaml
mva/runs/detect/train113/: args.yaml
mva/runs/detect/train114/: args.yaml
mva/runs/detect/train115/: args.yaml
mva/runs/detect/train116/: args.yaml
mva/runs/detect/train117/: args.yaml
mva/runs/detect/train118/: args.yaml
mva/runs/detect/train119/: args.yaml
mva/runs/detect/train12/: args.yaml
mva/runs/detect/train120/: args.yaml
mva/runs/detect/train121/: args.yaml
mva/runs/detect/train122/: args.yaml
mva/runs/detect/train123/: args.yaml
(+443 files in other folders)
