[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mva"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.11.1",
    "torch==2.4.1",
    "torchvision==0.19.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "B2"

[tool.flwr.app.components]
serverapp = "mva.server_app:app"
clientapp = "mva.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.2
local-epochs = 1

[tool.flwr.federations]
default = "global-deployment"

[tool.flwr.federations.global-deployment]
options.num-supernodes = 2

[tool.flwr.federations.global-deployment]
address = "149.233.55.34:8080"
insecure = true
