[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mva"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.11.1",
    "torch==2.4.1",
    "torchvision==0.19.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "B2"

[tool.flwr.app.components]
serverapp = "mva.server_app:app"
clientapp = "mva.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.2
local-epochs = 1
min-fit-clients = 1          # ← Ensure at least 1 client is needed
min-evaluate-clients = 1
min-available-clients = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 1
